<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:id="@+id/SettingsVerticalLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="fill_vertical|center_horizontal"
        android:gravity="center_horizontal|fill_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/unitsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:soundEffectsEnabled="true"
            android:text="@string/units" />

        <Button
            android:id="@+id/tutorialButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/tutorial"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/toPlayStoreButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/to_google_play"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/InfoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/information"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/ClearButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/clear_data"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/WipeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/wipe_data"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/AboutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/about"
            android:textAllCaps="false"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>