<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    app:layout_gravity="center"
    tools:context=".fragments.ItemDocumentFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/expireTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expires_on"
            android:textAlignment="textEnd"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/dateEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/date"
            android:inputType="none"
            android:minWidth="150dp"
            android:paddingStart="10dp"
            android:singleLine="true"
            android:textAlignment="textStart"
            android:textSize="20sp"
            android:importantForAutofill="no" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/renewDocumentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/renew_document" />

        <Button
            android:id="@+id/deleteDocumentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete" />
    </LinearLayout>

</LinearLayout>