<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:foregroundGravity="center_horizontal"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    app:layout_anchorGravity="center_horizontal"
    tools:context=".fragments.CreateFixFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/kmFixTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/changed_at"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/kmFixEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:focusable="true"
            android:gravity="center"
            android:hint="@string/km"
            android:inputType="number"
            android:singleLine="true"
            android:textSize="20sp"
            android:importantForAutofill="no" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/messageFixTextView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:lines="1"
            android:maxLines="1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:singleLine="true"
            android:text="@string/comment"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/messageFixEditText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:focusable="true"
            android:gravity="clip_vertical"
            android:hint="@string/information"
            android:inputType="text"
            android:lines="5"
            android:maxLines="5"
            android:minLines="5"
            android:singleLine="false"
            android:textSize="20sp"
            android:importantForAutofill="no" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/cancelFixButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:text="@string/reject" />

        <Button
            android:id="@+id/submitFixButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="5dp"
            android:text="@string/submit" />

    </LinearLayout>
</LinearLayout>