<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#ADFFFFFF"
    android:backgroundTint="#ADFFFFFF"
    android:orientation="vertical"
    tools:context=".fragments.PartFormFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:gravity="center|fill_horizontal|fill_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameFragmentDocsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="30dp"
                android:layout_weight="1"
                android:foregroundGravity="center_vertical|center"
                android:gravity="center_vertical"
                android:text="@string/document"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/timeFragmentDocsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="30dp"
                android:layout_weight="1"
                android:foregroundGravity="center_vertical|center"
                android:gravity="center_vertical"
                android:text="@string/expires_on"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                tools:ignore="RtlCompat" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nameFragmentDocsEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/dateFragmentDocsEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_weight="1"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/date"
                android:importantForAutofill="no"
                android:inputType="date"
                android:maxLines="1"
                android:singleLine="true" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/submitFragmentDocsButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_weight="1"
        android:text="@string/submit" />

</LinearLayout>