<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CalculatorConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/calculator" />

    <LinearLayout
        android:id="@+id/CalculatorLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ADFFFFFF"
        android:backgroundTint="#ADFFFFFF"
        android:fadeScrollbars="false"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/DistanceLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/distanceCalculatorEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/distance"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:singleLine="true" />

            <TextView
                android:id="@+id/unitDistCalculatorTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_weight="1"
                android:clickable="false"
                android:foregroundGravity="center_vertical|center|center_horizontal"
                android:gravity="center|center_horizontal|center_vertical"
                android:minWidth="75dp"
                android:singleLine="true"
                android:text="@string/km"
                android:textColor="#002AFF"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/FuelLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/fuelCalculatorEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/fuel"
                android:inputType="numberDecimal"
                android:singleLine="true" />

            <TextView
                android:id="@+id/unitFuelCalculatorTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_weight="1"
                android:clickable="false"
                android:foregroundGravity="center_vertical|center|center_horizontal"
                android:gravity="center|center_horizontal|center_vertical"
                android:minWidth="75dp"
                android:singleLine="true"
                android:text="@string/li"
                android:textColor="#002AFF"
                android:textStyle="bold" />

        </LinearLayout>

        <Switch
            android:id="@+id/saveResultCalculatorSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:foregroundGravity="center_vertical|center|center_horizontal"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/save_result"
            android:textColor="#192D97"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/mpgCalculatorButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/miles_per_gallon"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/kmCalculatorButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:singleLine="true"
            android:text="@string/liters_per_100km"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/resultCalculatorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:foregroundGravity="center"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/result"
            android:textColor="#192D97"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/prevResultCalculatorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:foregroundGravity="center"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/previous"
            android:textColor="#192D97"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/avgResultCalculatorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:foregroundGravity="center"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/average"
            android:textColor="#192D97"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/toggleCalculatorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:layout_weight="1"
            android:clickable="false"
            android:foregroundGravity="center_vertical|center|center_horizontal"
            android:gravity="center|center_horizontal|center_vertical"
            android:minWidth="75dp"
            android:singleLine="true"
            android:text="@string/li"
            android:textColor="#192D97"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/Credit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Background by Ray Reyes on Unsplash"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>