<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#ADFFFFFF"
    android:backgroundTint="#ADFFFFFF"
    android:orientation="vertical"
    tools:context=".fragments.PartFormFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:gravity="center|fill_horizontal|fill_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameFragmentPartsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="30dp"
                android:layout_weight="1"
                android:foregroundGravity="center_vertical|center"
                android:gravity="center_vertical"
                android:text="@string/part"
                android:textAlignment="viewEnd"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/distFragmentPartsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="30dp"
                android:layout_weight="1"
                android:foregroundGravity="center_vertical|center"
                android:gravity="center_vertical"
                android:text="@string/change_every"
                android:textAlignment="viewEnd"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/timeFragmentPartsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="30dp"
                android:layout_weight="1"
                android:foregroundGravity="center_vertical|center"
                android:gravity="center_vertical"
                android:text="@string/change_every"
                android:textAlignment="viewEnd"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nameFragmentPartsEditText"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginBottom="30dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/distFragmentPartsEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/km"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:importantForAutofill="no" />

                <CheckBox
                    android:id="@+id/kmCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/timeFragmentPartsEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/months"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:importantForAutofill="no" />

                <CheckBox
                    android:id="@+id/timeCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:textAlignment="textEnd" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/submitFragmentPartsButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_weight="1"
        android:text="@string/submit" />

</LinearLayout>